[package]
name = "token-pool-list"
version = "0.1.0"
edition = "2021"
authors = ["Keyne"]
description = "Contract to store all information of tokens and pools foor Hopers to allow permissionless listing"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.2.5"
cosmwasm-std = "1.2.5"
cw-multi-test = { version = "0.16.4", optional = true }
cw-ownable = "0.5.1"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
schemars = "0.8.12"
serde = { version = "1.0.162", features = ["derive"] }
thiserror = "1.0.40"
